# neo4j-mcp-workshop

./: .gitignore  README.md
.devcontainer/: README.md  devcontainer.json  setup.sh
python/: README.md  env.example  pyproject.toml
python/src/neo4j_mcp/: main.py
ts/: README.md  env.example  package-lock.json  package.json
ts/src/: index.ts
